--- a/server/public/css/index.css
+++ b/server/public/css/index.css
@@ -1,17 +1,34 @@
-.inline{
-    display: inline-block;
-}
-
-.text{
+body{
+    //display: inline-block;
+    font-family:Microsoft JhengHei;
+    font-size: 2em;
     color:#FF7744;
-    font-size:0.4cm;
-    font-family:fantasy;
+}
+p{
+    display: inline;
+}
+.big_number{
+    height:6em;
+    font-size:8em;
+}
+.status_list{
+    margin:1em 1em 1em 1em;
+}
+.status_item{
+    margin:10px 10px 10px 10px;
+    border-style:solid;
+    border-radius:4px;
+    border-width:4px;
+    border-color:#8C0044;
+}
+.cloth_state{
+    padding:1em;
 }
 
-.clothnum{
-    height:100px;
-    margin-bottom:10px;
-    border:1px;
+.cloth_num{
+    display: inline-block;
+    float:left;
+    width: 12em;
 }
 
 .state{
@@ -21,13 +38,6 @@
 }
 
 .time{
-    float :right;
-    width:10em;
-    font-size:2em;
-    border-style:solid;
-    border-radius:10px;
-    border-width:1px;
-    border-color:#8C0044;
 }
 
 .dryclothbtn{
@@ -37,4 +47,6 @@
     font-size:1em;
 }
 
-
+#status_list{
+    width:100%;
+}
