--- a/server/public/css/index.css
+++ b/server/public/css/index.css
@@ -9,15 +9,17 @@ p{
 }
 .big_number{
     height:6em;
-    font-size:8em;
+    font-size:6em;
 }
 .status_list{
     margin:1em 1em 1em 1em;
 }
 .status_item{
-    margin:10px 10px 10px 10px;
+    margin:1em;
+    padding:0 0.5em 0.5em 0.5em;
+    height:8em;
     border-style:solid;
-    border-radius:4px;
+    border-radius:1em;
     border-width:4px;
     border-color:#8C0044;
 }
